syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package categories;

service Category {
    rpc FindOne(CategoryIdRequest) returns (CategoryResponse) {};
    rpc FindAll(Empty) returns (FindAllCategoryResponse) {};
    rpc Create(CreateCategory) returns (CategoryResponse) {};
    rpc Delete(CategoryIdRequest) returns (DeleteCategory) {};
    rpc Update(UpdateCategoryRequest) returns (CategoryResponse) {};
}

message CategoryIdRequest {
    int64 id = 1;
}

message CreateCategory {
    string name = 1;
}

message DeleteCategory {
    int32 status = 1;
}

message CategoryResponse {
    int64 category_id = 1;
    string name = 2;
    int32 status = 3;
    Timestamp createdAt = 4;
    Timestamp updatedAt = 5;
}

message UpdateCategoryRequest {
    int64 id = 1;
    string name = 2;
}

message FindAllCategoryResponse {
    repeated CategoryResponse results = 1 [packed = true];
}


